fixed spacing issue between nav bar and hero

--- a/src/styles/HeroSignup.module.css
+++ b/src/styles/HeroSignup.module.css
@@ -9,11 +9,9 @@
   position: relative;
   width: 100%;
   height: 600px;
-  margin-bottom: var(--mantine-spacing-xl);
 }
 
 .heroImage {
-  border-radius: var(--mantine-radius-lg);
   z-index: 0;
 
 }
@@ -31,7 +29,6 @@
     rgba(0, 0, 0, 0.7) 0%,
     rgba(0, 0, 0, 0.5) 100%
   );
-  border-radius: var(--mantine-radius-lg);
   padding: var(--mantine-spacing-xl);
   z-index: 1;
 
